java 11 compliance, code cleanup